--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "keywords": [],
   "author": "Jessica Castro",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^20.3.0",
-    "tsup": "^6.7.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.3"
-  },
   "dependencies": {
-    "fastify": "^4.18.0"
+    "fastify": "4.18.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.0",
+    "tsup": "6.7.0",
+    "tsx": "3.12.7",
+    "typescript": "5.1.3"
   }
 }
