--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
+    "lint": "eslint --ext .ts src/",
+    "lint:fix": "eslint --fix --ext .ts src/",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Jessica Castro",
   "license": "MIT",
   "dependencies": {
-    "fastify": "4.18.0"
+    "@prisma/client": "4.15.0",
+    "dotenv": "16.1.4",
+    "fastify": "4.18.0",
+    "zod": "3.21.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "20.3.0",
+    "eslint": "8.42.0",
+    "prisma": "4.15.0",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
     "typescript": "5.1.3"
