--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "4.15.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.1.4",
     "fastify": "4.18.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "20.3.0",
     "eslint": "8.42.0",
     "prisma": "4.15.0",
