--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "4.15.0",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.8",
     "dotenv": "16.1.4",
     "fastify": "4.18.0",
     "zod": "3.21.4"
