--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NODE_ENV=dev
 # DATABASE
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
+# JWT
+JWT_SECRET='secret'
