--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "prebuild": "rm -rf build",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "lint": "eslint --ext .ts src/",
     "lint:fix": "eslint --fix --ext .ts src/",
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate dev",
-    "test": "vitest run --passWithNoTests",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http/controllers/**/__tests__",
+    "test:e2e:watch": "vitest --dir src/http/controllers/**/__tests__",
     "test:coverage": "vitest run --coverage",
-    "test:coverage:report": "vitest run report",
     "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "Jessica Castro",
   "license": "MIT",
   "dependencies": {
+    "@fastify/jwt": "7.0.0",
     "@prisma/client": "4.15.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.8",
@@ -32,10 +38,13 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.3.0",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-v8": "0.32.0",
     "@vitest/ui": "0.32.0",
     "eslint": "8.42.0",
+    "npm-run-all": "4.1.5",
     "prisma": "4.15.0",
+    "supertest": "6.3.3",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
     "typescript": "5.1.3",
