chore: fix some scripts, gyms e2e tests and users e2e tests

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "lint:fix": "eslint --fix --ext .ts src/",
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate dev",
-    "test": "vitest run --dir src/use-cases",
-    "test:watch": "vitest --dir src/use-cases",
+    "test": "vitest run vitest.unit.config.ts",
+    "test:watch": "vitest vitest.unit.config.ts",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
-    "test:e2e": "vitest run --dir src/http/controllers/**/__tests__",
-    "test:e2e:watch": "vitest --dir src/http/controllers/**/__tests__",
+    "test:e2e": "vitest run -c vitest.e2e.config.ts",
+    "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
