--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Jessica Castro",
   "license": "MIT",
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "7.0.0",
     "@prisma/client": "4.15.0",
     "bcryptjs": "2.4.3",
