--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint:fix": "eslint --fix --ext .ts src/",
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate dev",
-    "test": "vitest run vitest.unit.config.ts",
-    "test:watch": "vitest vitest.unit.config.ts",
+    "test": "vitest run -c vitest.unit.config.ts",
+    "test:watch": "vitest -c vitest.unit.config.ts",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
