--- a/.github/workflows/run-end-to-end-tests.yml
+++ b/.github/workflows/run-end-to-end-tests.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       postgres:
-        image: bitnami/postgres
+        image: postgres
         ports:
           - 5432:5432
         env:
