doc: add some keywords

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "gym-trackr-pass",
   "version": "1.0.0",
   "description": "Basicamente essa aplicação é como o Gypass ou TotalPass, que serve para pessoas fazerem check-in nas academias.",
-  "main": "index.js",
+  "main": "server.js",
+  "author": "Jessica Castro",
+  "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "prebuild": "rm -rf build",
@@ -22,9 +24,26 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
-  "keywords": [],
-  "author": "Jessica Castro",
-  "license": "MIT",
+  "keywords": [
+    "prisma",
+    "typescript",
+    "fastify",
+    "vite",
+    "vite-tsconfig-paths",
+    "eslint",
+    "vitest",
+    "zod",
+    "jwt",
+    "cookie",
+    "bcryptjs",
+    "dayjs",
+    "dotenv",
+    "solid",
+    "e2e",
+    "rest",
+    "api",
+    "gym"
+  ],
   "dependencies": {
     "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "7.0.0",
